<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" android:weightSum="1">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:gravity="left"
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/avg_difference" />

        <TextView
            android:gravity="left"
            android:id="@+id/avg_difference"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="TextView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:gravity="left"
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/max_difference" />

        <TextView
            android:gravity="left"
            android:id="@+id/max_difference"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="TextView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:gravity="left"
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/min_difference" />

        <TextView
            android:gravity="left"
            android:id="@+id/min_difference"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="TextView" />

    </TableRow>

</TableLayout>
